--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,22 @@
-dist
-cabal-dev
+#
+# NOTE! Don't add files that are generated in specific
+# subdirectories here. Add them in the ".gitignore" file
+# in that subdirectory instead.
+#
+# NOTE! Please use 'git ls-files -i --exclude-standard'
+# command after changing this file, to see if there are
+# any tracked files which get ignored after the change.
+#
+
+# swap and auto-generated files #
+#################################
+*.swp
+.*
+*~
 *.o
 *.hi
-*.chi
-*.chs.h
-.virtualenv
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-cabal.config
+*.ho
+
+# git files that we don't want to ignore #
+##########################################
+!.gitignore
